--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-APP_ENV=local
-APP_DEBUG=true
-APP_KEY=
+APP_ENV=production
+APP_DEBUG=false
+APP_KEY=kF6XQq0M0DTJA6GG9FAreky443G6572q
 APP_TIMEZONE=Asia/Shanghai
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=book_register
+DB_USERNAME=book_register
+DB_PASSWORD=book_register_password
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
